lib_Math documentation

--- a/_posts/1970-01-01-index.html
+++ b/_posts/1970-01-01-index.html
@@ -1,7 +1,7 @@
 ---
 title: ahk_library 
 layout: listing
-cats: ['core', 'string', 'json']
+cats: ['core', 'math', 'string', 'json', 'log']
 ---
 {% for cat in page.cats %}
 <a class="listingElement" href="/{{ site.baseurl }}/docs/{{ cat }}/index.html" title="{{ cat }}">
